# simple-header

./: ACKNOWLEDGMENTS  MANIFEST.in  README.md  build.sh  requirements-dev.txt  requirements.txt  setup.cfg
.github/: CONTRIBUTING.md  RELEASE_NOTES_TEMPLATE.md  SECURITY.md
.github/DISCUSSION_TEMPLATE/: feature-requests.yml  questions-and-answers.yml
.github/ISSUE_TEMPLATE/: config.yml  general-issue.yml
src/simple_header/: __init__.py  core.py  exceptions.py  inspect_headers.py
src/simple_header/data/: header_templates.json  referer_templates.json
tests/: __init__.py  test_core.py
