[metadata]
name = simple-header
version = 0.1.0
author = Lennart Haack
author_email = info@lennolium.dev
license = GPL-3.0
license_files = LICENSE
description = Seamlessly get authentic and ready-to-use browser headers with ease
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Lennolium/simple-header
project_urls =
    Bug Tracker = https://github.com/Lennolium/simple-header/issues
    Source = https://github.com/Lennolium/simple-header
    Download = https://github.com/Lennolium/simple-header/releases/latest
    Documentation = https://github.com/Lennolium/simple-header/README.md
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Topic :: Utilities
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Natural Language :: English
    Intended Audience :: Developers
    Intended Audience :: Science/Research


[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.8
install_requires =
    simple-useragent==0.1.0
    tldextract==5.1.1
    validators==0.22.0


[options.packages.find]
where = src
exclude =
    tests
